--- a/.github/workflows/django_ci_cd.yml
+++ b/.github/workflows/django_ci_cd.yml
@@ -22,7 +22,7 @@ jobs:
       - name:
         run:
 
-          python install -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Check migrations
         run: |
