--- a/.github/workflows/django_ci_cd.yml
+++ b/.github/workflows/django_ci_cd.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name:
         run:
-
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Check migrations
