--- a/.github/workflows/django_ci_cd.yml
+++ b/.github/workflows/django_ci_cd.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name:
+      - name: Setup python libraries
         run:
 
           pip install -r requirements.txt
