--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ click==8.1.7
 colorama==0.4.6
 decorator==5.1.1
 Django==4.2.7
+django-extensions==3.2.3
+django-phonenumber-field==7.3.0
 executing==2.0.1
 flake8==6.1.0
+graphviz==0.20.1
 ipython==8.19.0
 isort==5.13.2
 jedi==0.19.1
@@ -16,12 +19,16 @@ mypy-extensions==1.0.0
 packaging==23.2
 parso==0.8.3
 pathspec==0.12.1
+phonenumbers==8.13.27
+pillow==10.2.0
 platformdirs==4.1.0
 prompt-toolkit==3.0.43
 pure-eval==0.2.2
 pycodestyle==2.11.1
+pydot==2.0.0
 pyflakes==3.1.0
 Pygments==2.17.2
+pyparsing==3.1.1
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.3
