--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,16 @@ colorama==0.4.6
 decorator==5.1.1
 Django==4.2.7
 django-extensions==3.2.3
+django-filter==23.5
 django-phonenumber-field==7.3.0
+djangorestframework==3.14.0
 executing==2.0.1
 flake8==6.1.0
 graphviz==0.20.1
 ipython==8.19.0
 isort==5.13.2
 jedi==0.19.1
+Markdown==3.5.2
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mypy-extensions==1.0.0
@@ -29,6 +32,7 @@ pydot==2.0.0
 pyflakes==3.1.0
 Pygments==2.17.2
 pyparsing==3.1.1
+pytz==2023.3.post1
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.3
